# SmartIR

./: pyproject.toml
custom_components/smartir/: fan.py
